--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-remark-prismjs": "^5.9.0",
     "gatsby-remark-responsive-iframe": "^4.9.0",
     "gatsby-remark-smartypants": "^4.9.0",
+    "gatsby-source-contentful": "^5.12.0",
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-remark": "^4.9.0",
     "gatsby-transformer-sharp": "^3.12.0",
